# fb2-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  requirements.md
src/fb2mp3/: __init__.py  audio_exporter.py  audio_processor.py  chunker.py  cli.py  fb2_parser.py  models.py  pipeline.py  text_cleaner.py  tts_engine.py
tests/: conftest.py  test_audio_exporter.py  test_audio_processor.py  test_chunker.py  test_cli.py  test_fb2_parser.py  test_pipeline.py  test_text_cleaner.py  test_tts_engine.py
tests/fixtures/: sample.fb2
